2007-11-18  Sven Neumann  <sven@gimp.org>

	* gimptool-2.0.in: removed.

	* configure.in: removed leftover references to the gimptool script.

2007-11-18  Michael Natterer  <mitch@gimp.org>

	* app/gimp-log.[ch]: add SAVE_DIALOG log domain.

	* app/dialogs/file-save-dialog: port debug output to GIMP_LOG().

2007-11-18  Michael Natterer  <mitch@gimp.org>

	* app/gimp-log.[ch]: add DIALOG_FACTORY log domain.

	* app/widgets/gimpdialogfactory.c: port debug output to GIMP_LOG().

2007-11-18  Michael Natterer  <mitch@gimp.org>

	* app/gimp-log.[ch]: changed to work with different
	compiler-specific ways of doing macro varargs also cope with no
	macro vararg support at all. Pointed out by Hans Breuer.

2007-11-18  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_tool_events): improve debug output.

2007-11-17  Sven Neumann  <sven@gimp.org>

	* app/base/base-utils.c (get_physical_memory_size): added a cast
	to avoid an integer overflow on 32bit machines.

2007-11-17  Sven Neumann  <sven@gimp.org>

	* tools/gimptool.c: minor cleanup, hopefully not breaking anything.

2007-11-17  Sven Neumann  <sven@gimp.org>

	* app/base/base-utils.[ch]: changed to get_physical_memory_size()
	and added an implementation for POSIX.2 platforms.

2007-11-17  Tor Lillqvist  <tml@novell.com>

	* tools/gimptool.c: Ignore --msvc-syntax unless on Windows. Put
	some Windows-only stuff inside ifdef.

2007-11-16  Tor Lillqvist  <tml@novell.com>

	Use the gimptool program on Unix, too, instead of the gimptool
	script.

	* configure.in
	* Makefile.am: Drop gimptool script and gimptool-win32.c(.in)

	* tools/gimptool.c
	* tools/Makefile.am: Move gimptool-win32.c.in here and call it
	just gimptool.c. Build and install on all platforms.

	* tools/gimptool.c: Change accordingly.

	* doc/gimptool.1.in: Document the --msvc-syntax option.
	
2007-11-16  Michael Natterer  <mitch@gimp.org>

	* app/gimp-log.[ch]: add HELP log domain.
